kube/url/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-api-deployment
  namespace: shortener-app
  labels:
    app: url-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-api
  template:
    metadata:
      labels:
        app: url-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - kubeclass-187
                - kubeclass-188
      containers:
      - name: url-api-container
        image: jwnheo/url-api:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5001
