kube/url/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-api-service
  namespace: shortener-app
spec:
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 5001
     targetPort: 5001
  selector:
    app: url-api
